unpackaged/main/default/objects/Planned_Leave__c/Planned_Leave__c.object-meta.xml
<CustomObject>
    <label>Planned Leave</label>
    <nameField>
        <displayFormat>PL-{0000}</displayFormat>
        <label>Planned Leave Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Planned Leave</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>