unpackaged/main/default/objects/Planned_Leave__c/listViews/My_Planned_Leaves.listView-meta.xml
<ListView>
    <fullName>My_Planned_Leaves</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Comments__c</columns>
    <columns>Status__c</columns>
    <columns>Approver__c</columns>
    <columns>Approver_Comment__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Planned Leaves</label>
</ListView>